--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^14.1.0",
     "apollo-angular": "^4.0.1",
     "graphql": "^16.6.0",
+    "ngx-socket-io": "^4.3.0",
     "rxjs": "~7.5.0",
     "tailwind-scrollbar": "^1.3.1",
     "tslib": "^2.3.0",
